fixed btn so that it has contrasting white

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -671,3 +671,8 @@ p{
     margin: 0;
   }
 }
+
+
+#white-text{
+  color:white;
+}
